Prevent from background overlap in #main-content.

--- a/www.ptt.cc.user.css
+++ b/www.ptt.cc.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           www.ptt.cc
 @namespace      https://github.com/gslin/usercss/blob/master/www.ptt.cc.user.css
-@version        0.20220712.0
+@version        0.20231224.0
 @description    Monospace for main content
 @author         Gea-Suan Lin <gslin@gslin.org>
 ==/UserStyle== */
@@ -9,7 +9,7 @@
 @-moz-document domain("www.ptt.cc") {
     #main-content {
         font-family: "Noto Sans Mono CJK JP", monospace;
-        line-height: 1.2em;
+        line-height: 1.5em;
     }
     .article-metaline {
         line-height: 1.4em;
